# zuspec-be-sw

./: .buildinfo  .clinerules  .env  .envrc  .gitignore  Agents.md  CMakeLists.txt  README.md  api.html  contributing.html  examples.html  features.html  generator.html  genindex.html  index.html  ivpm.yaml  objects.inv  pyproject.toml  pytest.ini  quickstart.html  search.html  searchindex.js  setup.py  testing.html
_sources/: contributing.rst.txt  examples.rst.txt  generator.rst.txt  quickstart.rst.txt
doc/: BuildingAsyncMethods.md  ComputingAddresses.md  ExecutableDataModel.md  ExecutablePssPlan.md  ExecutablePssPlan.rst  ExecutorsAndMemAccess.md  FullyExecutablePSS.md  LoweringConversions.md  MemoryManagement.md  MulticorePartition.md  OutputStyles.md  StatementScheduling.md  SyntheticCoroutines.md  TableTest.rst  TestPlatformInterfaceAPI.md
docs/: api.rst  conf.py  error_handling_improvements.md  features.rst  implementation_plan.md  index.rst  internals.md  mapping.md  testing.rst
examples/: rtl_alu_example.py
memory-bank/: activeContext.md  productContext.md  (+4 more)
src/: AsyncScope.cpp  AsyncScope.h  AsyncScopeGroup.cpp  AsyncScopeGroup.h  CMakeLists.txt  Context.cpp  Context.h  CustomGenImportCall.cpp  CustomGenImportCall.h  Factory.cpp  Factory.h  FileUtil.cpp  FileUtil.h  FunctionImplData.h  FunctionInfo.cpp  FunctionInfo.h  FunctionMap.cpp  FunctionMap.h  GenRefExprExecModel.cpp  GenRefExprExecModel.h  GeneratorFunctionsThreaded.cpp  GeneratorFunctionsThreaded.h  GeneratorMultiCoreEmbCTest.cpp  GeneratorMultiCoreEmbCTest.h  IGenRefExpr.h  ITaskGenerateExecModelCustomGen.h  ITaskGenerateExpr.h  IVisitor.h  ImplAtomicBlock.cpp  ImplAtomicBlock.h  ImplFunctionData.cpp  ImplFunctionData.h  ImplVariable.cpp  ImplVariable.h  ImplVisitorBase.cpp  ImplVisitorBase.h  MethodCallFactoryPrint.cpp  MethodCallFactoryPrint.h  MethodCallFactoryRegRw.cpp  MethodCallFactoryRegRw.h  (+254 more)
src/include/arl/be/sw/: IContext.h  IGeneratorUnrolledTrace.h
src/include/zsp/be/sw/: FactoryExt.h  IContext.h  IFactory.h  IFunctionInfo.h  IFunctionMap.h  IGeneratorEvalIterator.h  IGeneratorFunctions.h  IGeneratorUnrolledTrace.h  IMethodCallFactoryAssocData.h  INameMap.h  IOutput.h  IOutputStr.h
src/include/zsp/be/sw/impl/: MethodCallFactoryAssocDataBase.h
src/include/zsp/be/sw/rt/: zsp_action.h  zsp_activity.h  zsp_activity_ctxt.h  zsp_activity_ctxt_par.h  zsp_activity_traverse.h  zsp_actor.h  zsp_actor_base.h  zsp_alloc.h  zsp_api.h  zsp_channel.h  zsp_component.h  zsp_executor.h  zsp_list.h  zsp_map.h  zsp_model.h  zsp_object.h  zsp_rt.h  zsp_struct.h  zsp_thread.h  zsp_types.h
src/include/zsp/esw/: zsp_esw_support.h
src/rt/: zsp_action.c  zsp_activity_ctxt.c  zsp_activity_ctxt_par.c  zsp_activity_traverse.c  zsp_actor.c  zsp_alloc.c  zsp_component.c  zsp_executor.c  zsp_list.c  zsp_map.c  zsp_object.c  zsp_struct.c  zsp_thread.c
src/zuspec/be/sw/: __init__.py  _version.py  async_analyzer.py  async_generator.py  c_generator.py  class_codegen.py  co_obj_factory.py  compiler.py  contract_emitter.py  dm_async_generator.py  expr_generator.py  library_wrapper.py  output.py  pipeline.py  runner.py  stmt_generator.py  sync_generator.py  type_mapper.py  validator.py
src/zuspec/be/sw/crt/: __init__.py  zdc_completion.py  zdc_queue.py  zdc_runtime.py  zdc_select.py  zdc_spawn.py
src/zuspec/be/sw/debug/: zuspec_gdb.py
src/zuspec/be/sw/ir/: __init__.py  activity.py  base.py  channel.py  coroutine.py  inference.py  memory.py  protocol.py  resource.py
src/zuspec/be/sw/mmr/: __init__.py  c_header.py  py_driver.py
src/zuspec/be/sw/passes/: __init__.py  activity_lower.py  async_lower.py  bulk_sync.py  c_emit.py  channel_port_lower.py  devirtualize.py  elaborate.py  frame_eliminate.py  inference_emit.py  mem_reg_lower.py  resource_lower.py  type_lower.py  wait_point_analysis.py
src/zuspec/be/sw/passes/rtl/: __init__.py  ast_lower.py  c_emit.py  comb_order.py  component_classify.py  counter_recognition.py  expr_lower.py  next_state_split.py  pipeline_lower.py  type_mapper.py  wait_lower.py
src/zuspec/be/sw/scenario/: __init__.py  constraint_c.py  driver.py  emitter.py  solver_paths.py  stmt_gen.py  sv_shim.py  timebase_emit.py
src/zuspec/be/sw/scenario/cbridge/: zsp_bridge.c  zsp_bridge.h
src/zuspec/be/sw/share/include/: zsp_alloc.h  zsp_api.h  zsp_channel.h  zsp_class.h  zsp_component.h  zsp_fifo.h  zsp_indexed_pool.h  zsp_init_ctxt.h  zsp_list.h  zsp_map.h  zsp_memory.h  zsp_method_port.h  zsp_model.h  zsp_mutex.h  zsp_object.h  zsp_par_block.h  zsp_rt.h  zsp_rtl.h  zsp_rtl_debug.h  zsp_rtl_harness.h  zsp_select.h  zsp_struct.h  zsp_thread.h  zsp_timebase.h  zsp_types.h
src/zuspec/be/sw/share/rt/: zsp_alloc.c  zsp_channel.c  zsp_component.c  zsp_fifo.c  zsp_indexed_pool.c  zsp_list.c  zsp_map.c  zsp_memory.c  zsp_mutex.c  zsp_object.c  zsp_par_block.c  zsp_rtl_debug.c  zsp_select.c  zsp_struct.c  zsp_thread.c  zsp_timebase.c
test/: CMakeLists.txt  TestBase.cpp  TestBase.h  TestComponentTree.cpp  TestComponentTree.h  TestExecutorActionQueueBuilder.cpp  TestExecutorActionQueueBuilder.h  TestGenerateEmbeddedC.cpp  TestGenerateEmbeddedC.h
test/examples/debug/: debug  debug.c
test/src/: TestBase.cpp  TestBase.h  TestCollectSortCompTreeTypes.cpp  TestCollectSortCompTreeTypes.h  TestComponentTree.cpp  TestComponentTree.h  TestExecutorActionQueueBuilder.cpp  TestGenerateActionComponentTypes.cpp  TestGenerateActionComponentTypes.h  TestGenerateEmbCCompTreeData.cpp  TestGenerateEmbCCompTreeData.h  TestGenerateEmbeddedC.cpp  TestGenerateEmbeddedC.h  TestGenerateFunctionsThreaded.cpp  TestGeneratorMultiCoreEmbCTest.cpp  TestGeneratorMultiCoreEmbCTest.h  TestRtThread.h
test/src/host_backend/: host_backend_sync.cpp
test/unit/: test_base.py  test_component.py  test_exec_smoke.py
(+199 files in other folders)
